# ReminderSuite

./: .gitignore  Makefile  README.md  index.html
ClientLib/: Makefile
ClientLib/src/: library.cpp  library.h
DataProvider/: CMakeLists.txt  DPInterface.h  Makefile
DataProvider/DBSQLite/: Makefile
DataProvider/DBSQLite/src/: DBSQLite.cpp  DBSQLite.h
DataProvider/DBTextFile/: Makefile
DataProvider/DBTextFile/src/: DBTextFile.cpp  DBTextFile.h  entry.cpp
DataProvider/DPFactory/: DBLibrary.cpp
DataProvider/src/: DBLibrary.cpp
DataProvider/src/DBTextFile/: DBTextFile.cpp  DBTextFile.h  entry.h
HttpWrapper/: Makefile
HttpWrapper/src/: config.h  main.cpp  mime_types.cpp  rdb_handler.cpp  rdb_handler.hpp  reminder-http.ini  request_handler.cpp
Server/: CMakeLists.txt  Makefile
Server/src/: main.cpp  reminder-dp.ini  server.cpp  server.h  session.cpp  session.h
